fix positioning/overflow bug

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 #container {
   background-color: rgba(255, 245, 220, 1);
   position: absolute;
@@ -6,12 +10,14 @@
   left: 10%;
   top: 10%;
   border: black solid 1px;
+  overflow: hidden;
+  cursor: none;
 }
 
 .cat {
   height: 120px;
   width: 200px;
-  margin: -100px 0 0 -60px;
+  margin: -60px 0 0 -100px;
   position: absolute;
-  background-image: url(public/image/cat.gif);
+  background-image: url(../images/cat.gif);
 }
